add embedded python code node

--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
   },
   "homepage": "https://github.com/rest-nvim/tree-sitter-http#readme",
   "dependencies": {
-    "node-addon-api": "^7.1.0",
-    "node-gyp-build": "^4.8.0"
+    "node-addon-api": "^7.1.0"
   },
   "peerDependencies": {
     "tree-sitter": "^0.21.1"
@@ -46,8 +45,9 @@
     }
   },
   "devDependencies": {
-    "tree-sitter-cli": "^0.23.0",
-    "prebuildify": "^6.0.0"
+    "node-gyp-build": "^4.8.2",
+    "prebuildify": "^6.0.0",
+    "tree-sitter-cli": "^0.23.0"
   },
   "tree-sitter": [
     {
